--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Project
 permalink: /project
-description: Projects of Donghoon Shin
+description: Projects of Suyeon Jeong
 ---
 
 {% assign projects = site.data.project.project %}
