--- a/cv/index.html
+++ b/cv/index.html
@@ -2,267 +2,43 @@
 layout: default
 baseurl: /cv
 title: CV
-description: Curriculum vitae of Donghoon Shin
+description: Curriculum vitae of Suyeon Jeong
 ---
 
 {% assign publications = site.publication | group_by: 'year' | sort: 'name' | reverse %}
 
 <div class="container py-4">
-    <div class="row">
-        <div class="col-12">
-            <main>
-                <header>
-                  <h1>Donghoon Shin <a class="pdf" href="{{ '/assets/pdf/cv.pdf' | relative_url }}" rel="external"><i class="fas fa-file-pdf"></i> <b>PDF</b></a></h1>
-                  <p><a href="#" class="cryptedmail"
-                    data-name="dhoon"
-                    data-domain="uw"
-                    data-tld="edu"
-                    onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a><br><a href="https://donghoon.io">donghoon.io</a><br></p>
-                </header>
-                <section id="education">
-                  <h2>Education</h2>
-                  <div class="dated-entry">
-                      <div class="dated-date">2022 -</div>
-                      <div class="dated-content"><b><a href="https://uw.edu">University of Washington</a></b>, Seattle, WA<br>
-                      Ph.D., <a href="https://hcde.uw.edu">Human Centered Design and Engineering</a><br>
-                      M.S., <a class="pe-1" href="https://hcde.uw.edu">Human Centered Design and Engineering</a> <small class="text-nowrap">(concurrent with Ph.D.)</small><br>
-                      <small>Advisor: <a href="https://faculty.washington.edu/garyhs/">Gary Hsieh</a> & <a href="https://www.llwang.net/">Lucy Lu Wang</a></small><br>
-                      </div>
-                  </div>
-                  <div class="dated-entry">
-                      <div class="dated-date">2016 - 2022</div>
-                      <div class="dated-content"><b><a href="https://snu.ac.kr/">Seoul National University</a></b>, Seoul, Korea<br>
-                      B.S., <a href="https://ee.snu.ac.kr/">Electrical and Computer Engineering</a><br>
-                      B.A., <a href="https://isc.snu.ac.kr/">Information Science</a><br>
-                      <small>Graduated <i>cum laude</i></small><br>
-                      </div>
-                  </div>
-                </section>
-                <section id="employment">
-                  <h2>Employment</h2>
-                  <div class="dated-entry">
-                    <div class="dated-date">Summer 2024</div>
-                    <div class="dated-content">
-                      <b><a href="https://research.adobe.com/">Adobe Research</a></b>, San Jose, CA<br>
-                      Research scientist intern<br>
-                      <small>Mentor: <a href="https://gromitchan.com/">Gromit Yeuk-Yin Chan</a></small>
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">Summer 2023</div>
-                    <div class="dated-content">
-                      <b><a href="https://clova.ai/en/research/research-areas.html">Naver AI Lab</a></b>, Seongnam, Korea<br>
-                      Research intern<br>
-                      <small>Mentor: <a href="http://younghokim.net/">Young-Ho Kim</a></small>
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020 - 2021</div>
-                    <div class="dated-content">
-                      <b><a href="https://elecle.bike/">Elecle</a></b>, Seoul, Korea</a><br>
-                      iOS developer<br>
-                    </div>
-                  </div>
-                </section>
-                <section id="publications">
-                  <h2>Publications</h2>
-                  {% for pubs in publications %}
-                    {% assign pub_items_sorted = pubs.items | sort: "month" | reverse %}
-                    {% for pub in pub_items_sorted %}
-                    <div class="dated-entry">
-                      <div class="dated-date">{% if forloop.first %}{{ pubs.name }}{% endif %}</div>
-                      <div class="dated-content"><a style="font-weight: 400" href="{{ '/publication/' | append: pub.slug | relative_url }}">{{ pub.title }}</a><br>
-                        {% for author in pub.authors %}
-                        {% assign author_data = site.data.people.people | where:"name", author | first %}
-                        {% if author == "Donghoon Shin" %}<a style="font-weight: 400 !important" href="https://donghoon.io">Donghoon Shin</a>{% if pub.coauthors contains author %}*{% endif %}{% else %}{% if pub.coauthors contains author %}{% if author_data.website %}<a href="{{ author_data.website }}" class="coauthor" style="font-weight: 400 !important">{{ author }}</a>*{% else %}<span class="coauthor" style="font-weight: 400 !important">{{ author }}</span>*{% endif %}{% else %}{% if author_data.website %}<a href="{{ author_data.website }}" class="coauthor">{{ author }}</a>{% else %}<span class="coauthor">{{ author }}</span>{% endif %}{% endif %}{% endif %}{% unless forloop.last%}, {% endunless %}
-                        {% endfor %}{% if pub.coauthors %}<span style="font-size: .8rem; font-weight: 300" class="ms-2">(* co-first authorship)</span>{% endif %}
-                        <br>
-                        {{ pub.venue }}.{% if pub.note %} <span style="font-weight: 200 !important">({{ pub.note}})</span>{% endif %}<br>
-                        {% if pub.award %}<i class="fas fa-medal"></i><span style="font-weight: 400">{{ pub.award }}</span><br>{% endif %}
-                      </div>
-                    </div>
-                    {% endfor %}
-                  {% endfor %}
-                </section>
-                <section id="patents">
-                  <h2>Patent</h2>
-                  <div class="dated-entry">
-                    <div class="dated-date">2021</div>
-                    <div class="dated-content">
-                      <b>Method and Apparatus for Mimicking Conversational Style</b><br>
-                      <span class="coauthor">Youjin Hwang</span>, <span class="coauthor">Joonhwan Lee</span>, Donghoon Shin<br>
-                      Republic of Korea Patent <span class="ms-1" style="font-weight: 200 !important">(10-2021-0032858)</span>
-                    </div>
-                  </div>
-                </section>
-                <section id="awards">
-                  <h2>Honors and Awards</h2>
-                  <div class="dated-entry">
-                    <div class="dated-date">2023</div>
-                    <div class="dated-content">
-                      <b>Graduate School Conference Presentation Award</b>, University of Washington<br>
-                      Conference presentation award for presenting a paper at CHI
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2022</div>
-                    <div class="dated-content">
-                      <b>Government Scholarship for Overseas Study</b>, Republic of Korea<br>
-                      Merit-based scholarship for graduate studies funded by the Korean government (~ 50 recipients selected annually)
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2022</div>
-                    <div class="dated-content">
-                      <b>Graduate School Fellowship</b>, University of Washington<br>
-                      Selected by the department
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2022</div>
-                    <div class="dated-content">
-                      <b>Gary Marsden Travel Award</b>, ACM SIGCHI<br>
-                      Travel grant for attending CHI 2022
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2022</div>
-                    <div class="dated-content">
-                      <b>Special Recognition for Outstanding Reviews</b>, ACM CHI 2022<br>
-                      Recognition for the paper review
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020</div>
-                    <div class="dated-content">
-                      <b>Honorable Mention Award</b>, ACM CHI 2020<br>
-                      Selected among the top 5% of paper submissions
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020</div>
-                    <div class="dated-content">
-                      <b>Presidential Science Scholarship</b>, Republic of Korea<br>
-                      Merit-based scholarship for undergraduate studies funded by the Korean government (~ 150 recipients selected annually)
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020</div>
-                    <div class="dated-content">
-                      <b>Conference and Travel Scholarship</b>, Google<br>
-                      Travel grant for attending CHI 2020 (travel canceled due to COVID-19)
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020</div>
-                    <div class="dated-content">
-                      <b>Best Undergraduate Research Award</b>, Seoul National University<br>
-                      Selected 1st among all the undergraduate research projects in 2019
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2019, 2021</div>
-                    <div class="dated-content">
-                      <b>Undergraduate Research Grant</b>, Seoul National University<br>
-                      ~$10,000 research grant for two undergraduate research projects
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2016, 2017</div>
-                    <div class="dated-content">
-                      <b>Merit-based Scholarship</b>, Seoul National University<br>
-                      Undergraduate merit-based scholarship
-                    </div>
-                  </div>
-                </section>
-                <section id="teaching">
-                  <h2>Teaching Experience</h2>
-                  <div class="dated-entry">
-                    <div class="dated-date">2023 -</div>
-                    <div class="dated-content"><b>Graduate Teaching Assistant</b>, University of Washington<br>
-                      Information Visualization (HCDE 511)<br>
-                      Designing for Behavior Change (HCDE 538)</div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2021</div>
-                    <div class="dated-content"><b>Undergraduate Teaching Assistant</b>, Seoul National University<br>
-                      Basic Computing (L0444.000400)</div>
-                  </div>
-                </section>
-                <section id="research">
-                  <h2>Research Experience</h2>
-                  <div class="dated-entry">
-                    <div class="dated-date">2020 - 2022</div>
-                    <div class="dated-content">
-                      <b><a href="https://thecoalalab.com/">CoALA Lab</a> & <a href="https://dig.cmu.edu/">Data Interaction Group</a></b>, <a href="https://cmu.edu/">Carnegie Mellon University</a><br>
-                      Research intern<br>
-                      <small>Mentor: <a href="https://kenholstein.com/">Kenneth Holstein</a> & <a href="https://perer.org/">Adam Perer</a></small>
-                    </div>
-                  </div>
-                  <div class="dated-entry">
-                    <div class="dated-date">2019 - 2020</div>
-                    <div class="dated-content">
-                      <b><a href="https://hcid.snu.ac.kr/">HCI+d Lab</a></b>, <a href="https://snu.ac.kr/">Seoul National University</a><br>
-                      Research intern<br>
-                      <small>Mentor: <a href="https://hcid.snu.ac.kr/people/joonhwan">Joonhwan Lee</a></small>
-                    </div>
-                  </div>
-                </section>
-                <section id="service">
-                  <h2>Services</h2>
-                  <h3>Program Committee</h3>
-                  <div class="oneline-entries">
-                    <div class="dated-entry">
-                      <div class="dated-date">2025</div>
-                      <div class="dated-content">ACM IUI</div>
-                    </div>
-                    <div class="dated-entry">
-                      <div class="dated-date">2024</div>
-                      <div class="dated-content">ACM CHI</div>
-                    </div>
-                  </div>
-                  <h3>Reviewer</h3>
-                  <div class="oneline-entries">
-                    <div class="dated-entry">
-                      <div class="dated-date">2020 -</div>
-                      <div class="dated-content">ACM CHI</div>
-                    </div>
-                    <div class="dated-entry">
-                      <div class="dated-date">2024</div>
-                      <div class="dated-content">ACM CSCW</div>
-                    </div>
-                    <div class="dated-entry">
-                      <div class="dated-date">2023</div>
-                      <div class="dated-content">ACM DIS</div>
-                    </div>
-                    <div class="dated-entry">
-                      <div class="dated-date">2021</div>
-                      <div class="dated-content">ACM MobileHCI</div>
-                    </div>
-                    <div class="dated-entry">
-                      <div class="dated-date">2021</div>
-                      <div class="dated-content">Journal of Medical Internet Research</div>
-                    </div>
-                  </div>
-                  <h3>Admission Committee</h3>
-                  <div class="oneline-entries">
-                    <div class="dated-entry">
-                      <div class="dated-date">2023</div>
-                      <div class="dated-content">Student reviewer for UW HCDE Ph.D. admission</div>
-                    </div>
-                  </div>
-                  <h3>Student Volunteer</h3>
-                  <div class="oneline-entries">
-                    <div class="dated-entry">
-                      <div class="dated-date">2020</div>
-                      <div class="dated-content">ACM ISS</div>
-                    </div>
-                  </div>
-                </section>
-              </main>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-12">
+          <main>
+              <header>
+                  <h1>Suyeon Jeong 
+                      <a class="pdf" href="{{ '/assets/pdf/cv.pdf' | relative_url }}" rel="external">
+                          <i class="fas fa-file-pdf"></i> <b>PDF</b>
+                      </a>
+                  </h1>
+                  <p>
+                      <a href="#" class="cryptedmail"
+                         data-name="suyeon.jeong20"
+                         data-domain="snu"
+                         data-tld="ac.kr"
+                         onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;">
+                      </a>
+                  </p>
+
+                  <!-- CV 이미지 1 -->
+                  <img src="{{ '/assets/images/cv/CV_page1.jpg' | relative_url }}" alt="CV Page 1" style="max-width: 90%; height: auto; margin-top: 20px;">
+
+                  <!-- CV 이미지 2 -->
+                  <img src="{{ '/assets/images/cv/CV_page2.jpg' | relative_url }}" alt="CV Page 2" style="max-width: 90%; height: auto; margin-top: 20px;">
+
+              </header>
+          </main>
+      </div>
+  </div>
 </div>
+
+
 
 <script>
   var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
