--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Donghoon Shin
+title: Suyeon Jeong
 description: HCI researcher | Ph.D. student at the University of Washington
 ---
 
@@ -11,25 +11,24 @@ description: HCI researcher | Ph.D. student at the University of Washington
     <div class="container vertical-center">
         <div class="row">
             <div class="col-12 col-md-8 col-xxl-9 ps-0 align-self-center">
-                <h4>Donghoon Shin</h4>
+                <h4>Suyeon Jeong</h4>
                 <div class="d-flex mx-2 mt-4 mb-3 justify-content-center d-md-none items-center">
-                    <img src="/assets/images/donghoon.jpg" class="w-75"/>
+                    <img src="/assets/images/Suyeon.jpg" class="w-75"/>
                 </div>
-                <p class="mt-3">I am an HCI researcher and a Ph.D. student in <a href="http://hcde.uw.edu">Human Centered Design & Engineering</a> at the <a href="https://uw.edu"><img class="logo" src="{{ 'assets/images/logo/uw.svg' | relative_url }}"/>University of Washington</a>, where I am co-advised by Profs. <a href="https://faculty.washington.edu/garyhs/">Gary Hsieh</a> and <a href="https://www.llwang.net/">Lucy Lu Wang</a></p>
-                <p>My research lies at the intersection of HCI and NLP. One area of interest is translational science, where I design and develop AI systems to make academic papers more accessible to real-world practitioners (e.g., designers, healthcare practitioners). Another line of research focuses on building agentic AI systems that help provide users with diverse perspectives to accomplish their goal-oriented tasks</p>
-                <p>Previously, I received my B.S. in Electrical & Computer Engineering and Information Science at <a href="https://en.snu.ac.kr/">Seoul National University</a>, where I was honored to be selected as the <a href="https://www.kosaf.go.kr/eng/jsp/aid/aid02_01_01.jsp">Presidential Science Scholar</a>. I also worked at <a href="https://research.adobe.com">Adobe Research</a> and <a href="https://clova.ai/en/research/research-areas.html">Naver AI</a> as a research intern, and <a href="https://elecle.bike/">Elecle</a> as a software engineer</p>
-                <p>I am the <a href="https://www.studyinkorea.go.kr/en/scholarship/Gks4Native1.do#">2022 Korean Government Scholar for Overseas Study</a></p>
-            </div>
+                <p class="mt-3">I am an undergraduate student at <a href="https://en.snu.ac.kr/">Seoul National University</a>, majoring in Mechanical Engineering. I was honored to be awarded the <a href="https://www.kosaf.go.kr/eng/jsp/aid/aid02_01_01.jsp">Presidential Science Scholarship</a>.</p>
+                <p>My research lies at the convergence of <strong>Materials Science</strong> and <strong>Robotics</strong>, with a particular focus on soft robotics and adaptive systems. I also worked as an R&D Lead at <a href="https://www.soliveventures.com/">Solive Ventures</a>, a startup developing solutions for home-based child development.</p>
+                <p>I envision a future where adaptable, compliant machines and robots play an essential role in society, revolutionizing healthcare devices, haptic interfaces, and human-machine interaction systems.</p>
+                </div>
             <div class="d-none d-md-block col-12 col-md-4 col-xxl-3 align-self-center text-center">
-                <img src="/assets/images/donghoon.jpg" class="w-100" style="max-width: 225px;"/>
+                <img src="/assets/images/Suyeon.jpg" class="w-100" style="max-width: 225px;"/>
             </div>
         </div>
     </div>
     <p class="mt-3">
       <a href="#" class="cryptedmail"
-        data-name="dhoon"
-        data-domain="uw"
-        data-tld="edu"
+        data-name="suyeon.jeong20"
+        data-domain="snu"
+        data-tld="ac.kr"
         onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;">
         <i class="fa-solid fa-envelope" style="margin-right: .3rem;"></i>
       </a>
