--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Suyeon Jeong
-description: HCI researcher | Ph.D. student at the University of Washington
+description: MECHE | B.S. student at the Seoul National University
 ---
 
 {% assign projects = site.data.project-main.project %}
@@ -16,7 +16,10 @@ description: HCI researcher | Ph.D. student at the University of Washington
                     <img src="/assets/images/Suyeon.jpg" class="w-75"/>
                 </div>
                 <p class="mt-3">I am an undergraduate student at <a href="https://en.snu.ac.kr/">Seoul National University</a>, majoring in Mechanical Engineering. I was honored to be awarded the <a href="https://www.kosaf.go.kr/eng/jsp/aid/aid02_01_01.jsp">Presidential Science Scholarship</a>.</p>
-                <p>My research lies at the convergence of <strong>Materials Science</strong> and <strong>Robotics</strong>, with a particular focus on soft robotics and adaptive systems. I also worked as an R&D Lead at <a href="https://www.soliveventures.com/">Solive Ventures</a>, a startup developing solutions for home-based child development.</p>
+                <p>My research lies at the convergence of <strong>Materials Science</strong> and <strong>Robotics</strong>, 
+                    with a particular focus on soft robotics and adaptive systems. 
+                    I also worked as an R&D Lead at <a href="https://www.soliveventures.com/">Solive Ventures</a>, 
+                    a startup developing solutions for home-based child development.</p>
                 <p>I envision a future where adaptable, compliant machines and robots play an essential role in society, revolutionizing healthcare devices, haptic interfaces, and human-machine interaction systems.</p>
                 </div>
             <div class="d-none d-md-block col-12 col-md-4 col-xxl-3 align-self-center text-center">
