--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,11 @@ description: Projects of Suyeon Jeong
 
 <div class="container py-4">
     <p style="font-weight: 500 !important; text-transform: uppercase;">Project</p>
+    <p style="font-weight: 450 !important; ">
+        Research Summary : 
+        <a class="pdf" href="{{ proj.pdf_url | relative_url }}" rel="external">
+            <i class="fas fa-file-pdf"></i> <b>PDF</b>
+    </p>
     <div class="row mt-3 g-3 grid">
         {% for proj in projects %}
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 grid-item">
