--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: MECHE | B.S. student at the Seoul National University
                 <p>My research lies at the convergence of <strong>Materials Science</strong> and <strong>Robotics</strong>, 
                     with a particular focus on soft robotics and adaptive systems. 
                     I also worked as an R&D Lead at <a href="https://www.soliveventures.com/">Solive Ventures</a>, 
-                    a startup developing solutions for home-based child development.</p>
+                    a startup developing soft sensory hardware and mobile application for home-based child development.</p>
                 <p>I envision a future where adaptable, compliant machines and robots play an essential role in society, revolutionizing healthcare devices, haptic interfaces, and human-machine interaction systems.</p>
                 </div>
             <div class="d-none d-md-block col-12 col-md-4 col-xxl-3 align-self-center text-center">
